--- a/miniApp/css/styles.css
+++ b/miniApp/css/styles.css
@@ -1,12 +1,17 @@
 #container {
-    width: 100px;
-    height: 100px;
-    position: relative;
-    background: yellow;
-  }
-  #animate {
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    background-color: red;
-  }
+  width: 100px;
+  height: 100px;
+  position: relative;
+  background: yellow;
+}
+
+#animate {
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  background-color: red;
+}
+
+#msg{
+  margin-top: 15px;
+}
